--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,21 +1,10 @@
 steps:
-  - name: 'gcr.io/$PROJECT_ID/composer'
-    id: 'install'
+  - name: 'gcr.io/cloud-builders/npm'
+    id: 'Install js deps'
     args: ['install']
-    waitFor: ['-']
-  - name: 'gcr.io/cloud-builders/docker'
-    id: 'build docker image'
-    args: ['build', '-t', 'gcr.io/surfscribe/github.com/ian-starts/surfscribe-backend:$COMMIT_SHA', '.']
-  - name: 'gcr.io/cloud-builders/docker'
-    id: 'push docker image'
-    args: ['push', 'gcr.io/surfscribe/github.com/ian-starts/surfscribe-backend:$COMMIT_SHA']
-  - name: 'gcr.io/cloud-builders/kubectl'
-    id: 'deploy to kubernetes'
-    args:
-      - 'set'
-      - 'image'
-      - 'deployment/surfscribe-pod'
-      - 'surfscribe-pod=gcr.io/surfscribe/github.com/ian-starts/surfscribe-backend:$COMMIT_SHA'
-    env:
-      - 'CLOUDSDK_COMPUTE_ZONE=europe-west1-b'
-      - 'CLOUDSDK_CONTAINER_CLUSTER=surfscribe-cluster'
+  - name: 'gcr.io/cloud-builders/npm'
+    id: 'Generate nuxt files'
+    args: ['run', 'generate']
+  - name: 'gcr.io/cloud-builders/gsutil'
+    id: 'upload to bucket'
+    args: ['-m', 'cp', '-r', 'build/*', 'gs://surfscribe-frontend/static']
