--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,4 +7,4 @@ steps:
     args: ['run', 'generate']
   - name: 'gcr.io/cloud-builders/gsutil'
     id: 'upload to bucket'
-    args: ['-m', 'cp', '-r', 'build/*', 'gs://surfscribe-frontend/static']
+    args: ['-m', 'cp', '-r', 'dist/*', 'gs://surfscribe-frontend/static']
