--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,3 +8,9 @@ steps:
   - name: 'gcr.io/cloud-builders/gsutil'
     id: 'upload to bucket'
     args: ['-m', 'cp', '-r', 'dist/*', 'gs://surfscribe-frontend/static']
+  - name: 'gcr.io/cloud-builders/gsutil'
+    id: 'remove old bucket'
+    args: ['rm', '-r', 'gs://surfscribe-frontend/static/*']
+  - name: 'gcr.io/cloud-builders/gsutil'
+    id: 'Make public'
+    args: ['acl', 'ch', '-r', '-u', 'AllUsers:R', 'gs://surfscribe-frontend/static/*']
