--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,10 +7,10 @@ steps:
     args: ['run', 'generate']
   - name: 'gcr.io/cloud-builders/gsutil'
     id: 'remove old bucket'
-    args: ['rm', '-r', 'gs://surfscribe-frontend/static/*']
+    args: ['rm', '-r', 'gs://surfscribe-frontend/*']
   - name: 'gcr.io/cloud-builders/gsutil'
     id: 'upload to bucket'
-    args: ['-m', 'cp', '-r', 'dist/*', 'gs://surfscribe-frontend/static']
+    args: ['-m', 'cp', '-r', 'dist/*', 'gs://surfscribe-frontend']
   - name: 'gcr.io/cloud-builders/gsutil'
     id: 'Make public'
-    args: ['acl', 'ch', '-r', '-u', 'AllUsers:R', 'gs://surfscribe-frontend/static']
+    args: ['acl', 'ch', '-r', '-u', 'AllUsers:R', 'gs://surfscribe-frontend']
