--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nuxt": "^2.4.0"
   },
   "devDependencies": {
+    "@nuxtjs/proxy": "^1.3.3",
     "autoprefixer": "^8.6.4",
     "node-sass": "^4.11.0",
     "nodemon": "^1.18.9",
