--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/axios": "^5.4.1",
     "@nuxtjs/pwa": "^2.6.0",
     "cross-env": "^5.2.0",
+    "lodash": "^4.17.11",
     "nuxt": "^2.4.0",
     "popmotion": "^8.6.8"
   },
